# PCLKinect

./: QT5  README.md
src/: ASMConvert.h  CMakeLists.txt  README.md  acquisitionwindows.cpp  acquisitionwindows.h  acquisitionwindows.ui  cloudwindows.cpp  cloudwindows.h  cloudwindows.ui  defineType.h  filternoise.cpp  filternoise.h  filternoise.ui  filterpassthrough.cpp  filterpassthrough.h  filterpassthrough.ui  filterremovenan.cpp  filterremovenan.h  filterremovenan.ui  filters.cpp  filters.h  filters.ui  icp.ui  icpthread.cpp  icpthread.h  main.cpp  pcl_acquisition_kinect.pro  pcl_acquisition_kinect.pro.user.18  pcl_acquisition_kinect.pro.user.3.2-pre1  pclacquisition.cpp  pclacquisition.h  pclacquisition.ui  pclacquisitioncolor.ui  qlabelimage.cpp  qlabelimage.h  recalagepoint.cpp  recalagepoint.h  registration.cpp  registration.h  registration.ui  (+5 more)
